# YummyControlServer

./: .gitignore  README.md  flake.nix  pyproject.toml
settings/: config.json  meta.json  prompt.txt
src/: app.py  entry.py  test.py
src/db/: controller.py  model.py
src/llm/: controller.py  llm.py
src/qr/: email.py  handler.py
