[project]
name = "controlserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.116.1",
    "google-api-python-client>=2.182.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "ollama>=0.5.4",
    "pillow>=11.3.0",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
